--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+workspace.xml
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -107,3 +109,4 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+.idea/workspace.xml
